backend/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
  namespace: predict-app
spec:
  selector:
    app: prediction-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
  namespace: predict-app
spec:
  selector:
    app: data-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
  namespace: predict-app
spec:
  selector:
    app: ingestion-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
