backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: predict-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/predict(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: prediction-service
            port:
              number: 8001
      - path: /api/data(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: data-service
            port:
              number: 8000
      - path: /api/ingestion(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ingestion-service
            port:
              number: 8002
